# asio_sodium_socket

./: .gitignore  .gitmodules  .travis.yml  BUILD.gn  CMakeLists.txt  README.md  travis_build.sh
cmake/: target_all_warnings_except.cmake  target_use_modern_cxx.cmake
include/asio_sodium/: crypto.hpp  crypto_socket.hpp  errors.hpp
include/asio_sodium/detail/: asio_types.hpp  client_handshake.hpp  endianness.hpp  handshake_hello.hpp  handshake_response.hpp  message_header.hpp  message_reader.hpp  message_writer.hpp  server_handshake.hpp  session_data.hpp  tuple_index_sequence.hpp
test/: handshake.cpp  handshake_hello.cpp  handshake_response.cpp  main.cpp  message_header.cpp  read_write.cpp  socket.cpp
